<resources>
    <string name="app_name">Cinema Manager Kotlin</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_booking">Lịch sử đặt vé</string>
    <string name="nav_user">Tài khoản</string>
    <string name="nav_admin_category">Thể loại</string>
    <string name="nav_admin_food_drink">Đồ ăn/uống</string>
    <string name="nav_admin_movie">Phim</string>
    <string name="nav_admin_booking">Lịch sử</string>
    <string name="nav_admin_manage">Quản lý</string>
    <string name="hint_search_movie">Tên phim…</string>
    <string name="hint_email">Email…</string>
    <string name="hint_password">Mật khẩu…</string>
    <string name="hint_password_old">Mật khẩu cũ…</string>
    <string name="hint_password_new">Mật khẩu mới…</string>
    <string name="hint_password_confirm">Xác nhận mật khẩu mới…</string>
    <string name="hint_name">Tên…</string>
    <string name="hint_id">ID…</string>
    <string name="hint_price">Giá…</string>
    <string name="hint_quantity">Số lượng…</string>
    <string name="hint_description">Mô tả…</string>
    <string name="hint_image">Link ảnh…</string>
    <string name="hint_image_banner">Link ảnh banner…</string>
    <string name="hint_url">Link video…</string>
    <string name="hint_date">Khởi chiếu…</string>
    <string name="waiting_message">Vui lòng đợi…</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="sign_up_user">Đăng Ký Tài Khoản</string>
    <string name="sign_in_user">Đăng Nhập Tài Khoản</string>
    <string name="admin">Quản trị viên</string>
    <string name="user">Người dùng</string>
    <string name="have_account">Đã có tài khoản?</string>
    <string name="have_not_account">Chưa có tài khoản?</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="report">Báo cáo doanh thu</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="history_booking">Lịch sử đặt vé</string>
    <string name="reset_password">Gửi lại mật khẩu</string>
    <string name="add_food_title">Thêm Đồ ăn/Đồ uống</string>
    <string name="edit_food_title">Chỉnh sửa Đồ ăn/Đồ uống</string>
    <string name="currency">000 VNĐ</string>
    <string name="currency_movie">000 VNĐ / 1 vé</string>
    <string name="date_movie">Khởi chiếu:</string>
    <string name="price_movie">Giá vé:</string>
    <string name="name_movie">Tên phim:</string>
    <string name="room_movie">Phòng chiếu:</string>
    <string name="time_movie">Giờ chiếu:</string>
    <string name="add_movie_title">Thêm phim mới</string>
    <string name="edit_movie_title">Chỉnh sửa thông tin phim</string>
    <string name="movie_detail">Chi tiết phim </string>
    <string name="all_room">Tất cả phòng </string>
    <string name="all_time">Mọi khung giờ </string>
    <string name="watch_trailer">Xem Trailer </string>
    <string name="description_movie">Mô tả phim </string>
    <string name="infor_movie">Thông tin chiếu phim </string>
    <string name="video_trailer">Video Trailer </string>
    <string name="select_room">Chọn phòng chiếu phim</string>
    <string name="select_time">Chọn giờ chiếu phim</string>
    <string name="select_food">Chọn đồ ăn / đồ uống</string>
    <string name="count_booking">Số lượng vé muốn mua</string>
    <string name="hint_count_booking">Số lượng vé…</string>
    <string name="booking">Đặt vé</string>
    <string name="count">Số lượng</string>
    <string name="confirm_booking_infor">Xác nhận thông tin đặt vé</string>
    <string name="movie_name">Tên phim:</string>
    <string name="label_email">Email:</string>
    <string name="label_id">Mã:</string>
    <string name="count_booking_label">Số lượng vé:</string>
    <string name="count_seat_label">Ghế đã chọn:</string>
    <string name="food_drink_label">Đố ăn/uống:</string>
    <string name="total_amount_label">Tổng tiền:</string>
    <string name="select_seat_label">Chọn ghế ngồi</string>
    <string name="main_screen">Màn hình chính</string>
    <string name="label_quantity">Số lượng</string>
    <string name="add_category_title">Thêm thể loại</string>
    <string name="edit_category_title">Chỉnh sửa thể loại</string>
    <string name="select_category">Chọn thể loại (*)</string>
    <string name="label_category">Thể loại:</string>
    <string name="category">Thể loại</string>
    <string name="label_all_movies">Tất cả phim</string>
    <string name="label_movie_popular">Phim phổ biến nhất</string>
    <string name="label_list_category">Thể loại</string>
    <string name="label_all">Tất cả</string>
    <string name="confirm_booking">Xác nhận đặt vé</string>
    <string name="confirm">Xác nhận</string>
    <string name="payment_method">Phương thức thanh toán</string>
    <string name="label_payment">Thanh toán:</string>
    <string name="label_date_create">Ngày:</string>
    <string name="quantity_stock">Hiện tại còn:</string>
    <string name="request_qr">Quét QR Code</string>
    <string name="revenue">Doanh thu</string>
    <string name="label_total_revenue">Tổng doanh thu:</string>
    <string name="column_stt">STT</string>
    <string name="column_movie_name">Tên phim</string>
    <string name="column_quantity">Số lượng vé</string>
    <string name="column_total_amount">Tổng Tiền</string>
    <string name="label_booking_used">Vé đã sử dụng</string>
    <string name="label_confirm_booking">Xác nhận vé</string>
    <string name="action_ok">Đồng ý</string>
    <string name="action_cancel">Hủy</string>
    <string name="action_add">Thêm</string>
    <string name="action_edit">Chỉnh sửa</string>
    <string name="msg_confirm_login_another_device">Bạn có chắc chắn muốn thoát ứng dụng?</string>
    <string name="msg_email_require">Vui lòng nhập địa chỉ email</string>
    <string name="msg_password_require">Vui lòng nhập mật khẩu</string>
    <string name="msg_old_password_require">Vui lòng nhập mật khẩu cũ</string>
    <string name="msg_new_password_require">Vui lòng nhập mật khẩu mới</string>
    <string name="msg_confirm_password_require">Vui lòng xác nhận mật khẩu mới</string>
    <string name="msg_old_password_invalid">Mật khẩu cũ không chính xác, vui lòng nhập lại</string>
    <string name="msg_confirm_password_invalid">Xác nhận mật khẩu mới không trùng khớp</string>
    <string name="msg_new_password_invalid">Mật khẩu mới phải khác mật khẩu cũ</string>
    <string name="msg_change_password_successfully">Thay đổi mật khẩu thành công</string>
    <string name="msg_reset_password_successfully">Reset mật khẩu thành công, vui lòng kiểm tra email của bạn</string>
    <string name="msg_email_invalid">Email không hợp lệ, vui lòng nhập lại</string>
    <string name="msg_email_invalid_admin">Email quản trị viên cần có định dạng @admin.com</string>
    <string name="msg_email_invalid_user">Email sai định dạng dành cho người dùng</string>
    <string name="msg_sign_up_error">Đăng ký không thành công, vui lòng thử lại</string>
    <string name="msg_sign_in_error">Đăng nhập không thành công, vui lòng thử lại</string>
    <string name="msg_name_food_require">Vui lòng nhập tên đồ ăn/đồ uống</string>
    <string name="msg_price_food_require">Vui lòng nhập giá đồ ăn/đồ uống</string>
    <string name="msg_quantity_food_require">Vui lòng nhập số lượng</string>
    <string name="msg_add_food_successfully">Thêm đồ ăn/đồ uống thành công</string>
    <string name="msg_delete_title">Xác nhận xóa</string>
    <string name="msg_confirm_delete">Bạn có chắc chắn muốn xóa mục này không?</string>
    <string name="msg_delete_food_successfully">Xóa đồ ăn/đồ uống thành công</string>
    <string name="msg_edit_food_successfully">Chỉnh sửa đồ ăn/đồ uống thành công</string>
    <string name="msg_name_category_require">Vui lòng nhập tên thể loại</string>
    <string name="msg_image_category_require">Vui lòng nhập link ảnh thể loại</string>
    <string name="msg_edit_category_successfully">Chỉnh sửa thể loại thành công</string>
    <string name="msg_add_category_successfully">Thêm thể loại thành công</string>
    <string name="msg_delete_category_successfully">Xóa thể loại thành công</string>
    <string name="msg_count_invalid">Hiện tại không đủ số lượng bạn muốn mua</string>
    <string name="msg_payment_error">Thanh toán lỗi, vui lòng thử lại !!!</string>
    <string name="msg_movie_date_invalid">Phim đã qua ngày công chiếu, vui lòng chọn phim khác !!!</string>
    <string name="msg_confirm_booking_success">Xác nhận vé thành công !!!</string>
    <string name="msg_add_movie_successfully">Thêm phim mới thành công</string>
    <string name="msg_delete_movie_successfully">Xóa phim thành công</string>
    <string name="msg_edit_movie_successfully">Chỉnh sửa thông tin phim thành công</string>
    <string name="msg_category_movie_require">Vui lòng chọn thể loại phim</string>
    <string name="msg_name_movie_require">Vui lòng nhập tên phim</string>
    <string name="msg_description_movie_require">Vui lòng nhập mô tả phim</string>
    <string name="msg_price_movie_require">Vui lòng nhập giá phim</string>
    <string name="msg_date_movie_require">Vui lòng nhập ngày phim khởi chiếu</string>
    <string name="msg_image_movie_require">Vui lòng nhập link ảnh phim</string>
    <string name="msg_image_banner_movie_require">Vui lòng nhập link ảnh banner</string>
    <string name="msg_video_movie_require">Vui lòng nhập link video phim</string>
    <string name="msg_select_room_require">Vui lòng chọn phòng chiếu phim</string>
    <string name="msg_select_time_require">Vui lòng chọn giờ chiếu phim</string>
    <string name="msg_booking_movie_success">Đặt vé xem phim thành công !!!</string>
    <string name="msg_count_seat">Vui lòng đặt số lượng vé muốn mua</string>
    <string name="todo">back\n</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>