<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_item"
    android:layout_width="match_parent"
    android:layout_height="@dimen/define_dimen_50"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_stt"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/column_stt"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/tv_movie_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/column_movie_name"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/column_quantity"
        android:textSize="@dimen/text_size_small" />

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:gravity="center"
        android:textColor="@color/red"
        android:text="@string/column_total_amount"
        android:textSize="@dimen/text_size_small" />
</LinearLayout>