<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="ContentDescription, Autofill">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/define_dimen_12"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/add_movie_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xnormal"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/define_dimen_18">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_category"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small" />

            <Spinner
                android:id="@+id/spn_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_5"
                android:background="@color/transparent"
                android:minHeight="48dp"
                android:scrollbars="none" />

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:hint="@string/hint_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#757575"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/edt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:hint="@string/hint_description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:padding="@dimen/define_dimen_12">

                <EditText
                    android:id="@+id/edt_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/define_dimen_10"
                    android:layout_toStartOf="@+id/tv_currency"
                    android:background="@color/white"
                    android:hint="@string/hint_price"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_size_small"
                    tools:ignore="TouchTargetSizeCheck" />

                <TextView
                    android:id="@+id/tv_currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:text="@string/currency_movie"
                    android:textColor="#DD2C00"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:hint="@string/hint_date"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/edt_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:hint="@string/hint_image"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#757575"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/edt_image_banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:hint="@string/hint_image_banner"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#757575"
                android:textSize="@dimen/text_size_small" />

            <EditText
                android:id="@+id/edt_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_10"
                android:background="@drawable/bg_white_corner_6_border_gray"
                android:hint="@string/hint_url"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minHeight="48dp"
                android:padding="@dimen/define_dimen_12"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="#757575"
                android:textSize="@dimen/text_size_small" />

            <Button
                android:id="@+id/btn_add_or_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/define_dimen_20"
                android:background="@drawable/bg_main_corner_8"
                android:text="@string/action_add"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_small" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>